--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@ckb-lumos/hd-cache": "^0.16.0",
     "@ckb-lumos/helpers": "^0.16.0",
     "@ckb-lumos/indexer": "^0.16.0",
+    "@ckb-lumos/sql-indexer": "0.16.0",
     "@ckb-lumos/transaction-manager": "^0.16.0",
     "@nervosnetwork/ckb-sdk-utils": "^0.40.0",
     "ckb-js-toolkit": "^0.9.1",
+    "knex": "^0.95.4",
     "nodemon": "^2.0.7",
+    "pg": "^8.6.0",
     "secp256k1": "^4.0.2"
   },
   "scripts": {
